--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mongodb": "^4.1.4",
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
+    "passport": "^0.5.0",
+    "passport-ldapauth": "^3.0.1",
     "pug": "^3.0.2"
   },
   "description": "webapps-f21-assignment-11-manyamsrk",
